--- a/src/app/components/laboratorio/laboratorio.component.html
+++ b/src/app/components/laboratorio/laboratorio.component.html
@@ -25,9 +25,9 @@
             <mat-cell *matCellDef="let laboratorio" (click)="selecionaLaboratorio(laboratorio)" class="mouse-pointer"> {{laboratorio.nome}} </mat-cell>
           </ng-container>
 
-          <ng-container matColumnDef="local">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Local </mat-header-cell>
-            <mat-cell *matCellDef="let laboratorio" (click)="selecionaLaboratorio(laboratorio)" class="mouse-pointer"> {{laboratorio.local}} </mat-cell>
+          <ng-container matColumnDef="estado">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Estado </mat-header-cell>
+            <mat-cell *matCellDef="let laboratorio" (click)="selecionaLaboratorio(laboratorio)" class="mouse-pointer"> {{laboratorio.estado.sigla}} </mat-cell>
           </ng-container>
 
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -78,9 +78,13 @@
                    [(ngModel)]="laboratorioEditando.nome">
           </mat-form-field>
           <mat-form-field appearance="outline" style="width: 100%">
-            <mat-label>Local</mat-label>
-            <input matInput placeholder="Local" [disabled]="!adicionandoLaboratorio() && !editandoLaboratorio()"
-                   [(ngModel)]="laboratorioEditando.local">
+            <mat-label>Estado</mat-label>
+            <input matInput [formControl]="estadoAutoCompleteControl" [matAutocomplete]="auto1" type="text">
+            <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" [displayWith]="estadoDisplayFn">
+              <mat-option *ngFor="let estado of estadoFilteredOptions | async" [value]="estado">
+                {{estado.nome}}
+              </mat-option>
+            </mat-autocomplete>
           </mat-form-field>
         </mat-card-content>
       </mat-card>
